Finished up, except for mobile

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sam's Portfolio Website</title>
     <!-- Import the webpage's stylesheet -->
-    <!-- import p5js stuff -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
     <link rel="stylesheet" href="assets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,24 +12,39 @@
     <!-- Import the webpage's javascript file -->
   </head>
   <body>
-    <div id="canvas-container">
     <div class="wrapper">
         <div class="name-info">
-            <h1 class="name">
-                Sam Variyam
+            <h1 class="glitch"id="glitch">
+                Sam<br>Variyam
             </h1>
             <h2 class="info">
                 Designer
             </h2>
         </div>
         <div class="projects">
-            <h3 class="link"><a href="https://samvariyam.github.io/interaction-story-final/"> Project 1 </a></h3>
-            <h3 class="link"><a href="https://samvariyam.github.io/tooth-project/"> Project 2 </a></h3>
-            <h3 class="link"><a href="https://samvariyam.github.io/nyc_open_data/"> Project 3 </a></h3>
-            <h3 class="link"><a href="https://samvariyam.github.io/nyc_open_data/"> Project 4 </a></h3>
+          <div class="container">
+            <div class="project-container">
+              <a href="https://samvariyam.github.io/interaction-story-final/">
+                <img class="card" src="assets/proj-one.png">
+              </a>
+              <p class="project-number">Project 1</p>
+          </div>
+          <div class="project-container">
+            <a href="https://samvariyam.github.io/tooth-project/">
+              <img class="card" src="assets/proj-two.png">
+            </a>
+            <p class="project-number">Project 2</p>
+          </div>
+            <div class="project-container">
+              <a href="https://samvariyam.github.io/nyc_open_data/">
+                <img class="card" src="assets/proj-three.png">
+            </a>
+            <p class="project-number">Project 3</p>
+          </div>
+          </div>
         </div>
     </div>
     </div>
-    <script src="assets/script.js" defer></script>
+    <script src="assets/script.js"></script>
   </body>
 </html>
