Updated all projects

--- a/index.html
+++ b/index.html
@@ -27,19 +27,49 @@
               <a href="https://samvariyam.github.io/interaction-story-final/">
                 <img class="card" src="assets/proj-one.png">
               </a>
-              <p class="project-number">Project 1</p>
+              <p class="project-number">Project 1<br>Kelsey's Night Out</p>
           </div>
           <div class="project-container">
             <a href="https://samvariyam.github.io/tooth-project/">
               <img class="card" src="assets/proj-two.png">
             </a>
-            <p class="project-number">Project 2</p>
+            <p class="project-number">Project 2<br>Teeth?</p>
           </div>
             <div class="project-container">
               <a href="https://samvariyam.github.io/nyc_open_data/">
                 <img class="card" src="assets/proj-three.png">
             </a>
-            <p class="project-number">Project 3</p>
+            <p class="project-number">Project 3<br>NYC Water Consumption</p>
+          </div>
+          <div class="project-container">
+            <a href="https://glitch.com/~sam-assignment1">
+              <img class="card" src="assets/proj-four.png">
+            </a>
+            <p class="project-number">Project 4<br>Are.Na Block</p>
+          </div>
+          <div class="project-container">
+            <a href="https://samvariyam.github.io/samvariyam-c2portfolio/conversation/index.html">
+              <img class="card" src="assets/proj-five.png">
+            </a>
+            <p class="project-number">Project 5<br>A Conversation</p>
+          </div>
+          <div class="project-container">
+            <a href="https://samvariyam.github.io/c2-responsive-design/">
+              <img class="card" src="assets/proj-six.png">
+            </a>
+            <p class="project-number">Project 6<br>Me, Again?</p>
+          </div>
+          <div class="project-container">
+            <a href="https://samvariyam.github.io/grid-des/">
+              <img class="card" src="assets/proj-seven.png">
+            </a>
+            <p class="project-number">Project 7<br>Mahesh's Revenge</p>
+          </div>
+          <div class="project-container">
+            <a href="https://samvariyam.github.io/json/">
+              <img class="card" src="assets/proj-eight.png">
+            </a>
+            <p class="project-number">Project 8<br>Mother</p>
           </div>
           </div>
         </div>
